--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="text-center">
             <p>Tutorial: <a href="#">pieperhome.de</a></p>
-            <p>Code: <a href="#">Github</a>
+            <p>Code: <a href="https://github.com/nachtwandler/ui-router-example/">Github</a>
         </div>
     </body>
 </html>
